# AI_resume_screening_assignment

./: .env.example  .gitignore  README.md  docker-compose.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-project-scaffold-database/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-TASK-SPECS.md
.planning/phases/04-arq-worker-with-retry/: 04-01-SUMMARY.md
.planning/phases/06-infrastructure/: 06-01-SUMMARY.md  06-02-SUMMARY.md  06-CONTEXT.md
.planning/phases/07-data-layer/: 07-01-PLAN.md  07-CONTEXT.md  07-DISCUSSION-LOG.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_request_hash.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/routes/: evaluations.py  health.py  metrics.py
backend/app/services/: __init__.py  llm_service.py  pdf_parser.py
backend/app/worker/: settings.py  tasks.py
backend/prompts/: resume_screening.md
tests/: conftest.py  test_evaluations.py
