[project]
name = "resume-screener"
version = "0.1.0"
description = "AI Resume Screening Service"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.0",
    "sqlalchemy[asyncio]>=2.0.0,<2.1.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "pydantic-settings>=2.8.0",
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "arq>=0.24.0",
    "pdfplumber>=0.11.0",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
